# tam-mush

./: .env  .env.sample  .gitignore  Cargo.toml  docker-compose.yml
migrations/2020-11-22-142529_create_users/: down.sql  up.sql
src/: identity.p12  main.rs  schema.rs  server.rs
src/command/: command.rs
src/engine/: mod.rs
src/engine/command/: command.rs  command_handler.rs  mod.rs
src/engine/command/commands/: login.rs  mod.rs  register.rs
src/engine/server/: server.rs
src/engine/utils/: db.rs
src/models/: user.rs
