[package]
name = "tamush"
version = "0.1.0"
authors = ["Jonathan Landicheff <jlandicheff@kilig.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5", features = ["full"] }
futures = { version = "0.3" }
tokio-native-tls = "0.2.0"
native-tls = "0.2"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.15"
chrono = "0.4.19"
uuid = "0.6.5"
regex = "1.4.2"
lazy_static = "1.4.0"
bcrypt = "0.8"
